@@ -8,13 +8,16 @@
 
 package org.sosy_lab.cpachecker.cfa.parser.llvm;
 
+import static org.sosy_lab.cpachecker.cfa.types.c.CTypes.isIntegerType;
+import static org.sosy_lab.cpachecker.cfa.types.c.CTypes.isSignedIntegerType;
+import static org.sosy_lab.llvm_j.Value.OpCode.AShr;
+
 import com.google.common.base.Optional;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.TreeMultimap;
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -156,7 +159,7 @@ public class CFABuilder {
 
   public ParseResult build(final Module pModule, final String pFilename) throws LLVMException {
     visit(pModule, pFilename);
-    List<Path> input_file = ImmutableList.of(Paths.get(pFilename));
+    List<Path> input_file = ImmutableList.of(Path.of(pFilename));
 
     return new ParseResult(functions, cfaNodes, globalDeclarations, input_file);
   }
@@ -603,7 +606,7 @@ public class CFABuilder {
             curNode = newNode(pFunction);
             addEdge(
                 new CStatementEdge(
-                    expr.toASTString() + i.toString(),
+                    expr.toASTString() + i,
                     (CStatement) expr,
                     exprLocation,
                     prevNode,
@@ -726,7 +729,6 @@ public class CFABuilder {
             logger.logf(Level.WARNING, "Unhandled memory intrinsic!");
         }
         logger.logf(Level.FINE, "Taking intrinsic function call as undefined");
-        pItem.dump();
     }
 
     FileLocation loc = getLocation(pItem, pFileName);
@@ -1068,6 +1070,7 @@ public class CFABuilder {
   private CExpression createFromArithmeticOp(
       final Value pItem, final OpCode pOpCode, final String pFileName) throws LLVMException {
     final CType expressionType = typeConverter.getCType(pItem.typeOf());
+    CType internalExpressionType = expressionType;
 
     // TODO: Currently we only support flat expressions, no nested ones. Make this work
     // in the future.
@@ -1110,8 +1113,37 @@ public class CFABuilder {
         operation = BinaryOperator.SHIFT_LEFT;
         break;
       case LShr: // Logical shift right
-      case AShr: // arithmetic shift right
-        // TODO Differentiate between logical and arithmetic shift somehow
+        // GNU C performs a logical shift for unsigned types
+        op1type = typeConverter.getCType(operand1.typeOf(), /* isUnsigned = */ true);
+        operand1Exp = castToExpectedType(operand1Exp, op1type, getLocation(pItem, pFileName));
+        // $FALL-THROUGH$
+      case AShr: // Arithmetic shift right
+        if (!(isIntegerType(op1type) && isIntegerType(op2type))) {
+          throw new UnsupportedOperationException(
+              "Right shifts are only supported for integer types, but operands were "
+                  + op1type
+                  + " and "
+                  + op2type);
+        }
+        if (operand2.isConstantInt()) {
+          long op2value = operand2.constIntGetSExtValue();
+          int bitwidthOp1 = operand1.typeOf().getIntTypeWidth();
+          if (op2value < 0 || op2value >= bitwidthOp1) {
+            throw new LLVMException("Shift count is negative or >= width of type");
+          }
+        }
+
+        // operand2 should always be treated as an unsigned value
+        op2type = typeConverter.getCType(operand2.typeOf(), /* isUnsigned = */ true);
+        operand2Exp = castToExpectedType(operand2Exp, op2type, getLocation(pItem, pFileName));
+
+        // GNU C performs an arithmetic shift for signed types
+        // op1type is signed by default for integer types
+        assert pOpCode != AShr || isSignedIntegerType(op1type)
+            : "First operand of right shift wasn't signed in the case of an arithmetic right shift";
+
+        // calculate the shift with the signedness of op1type
+        internalExpressionType = machineModel.applyIntegerPromotion(op1type);
         operation = BinaryOperator.SHIFT_RIGHT;
         break;
       case And:
@@ -1127,13 +1159,15 @@ public class CFABuilder {
         throw new AssertionError("Unhandled operation " + pOpCode);
     }
 
-    return new CBinaryExpression(
-        getLocation(pItem, pFileName),
-            expressionType,
-            expressionType, // calculation type is expression type in LLVM
+    CBinaryExpression expression =
+        new CBinaryExpression(
+            getLocation(pItem, pFileName),
+            internalExpressionType,
+            internalExpressionType, // calculation type is expression type in LLVM
             operand1Exp,
             operand2Exp,
             operation);
+    return castToExpectedType(expression, expressionType, getLocation(pItem, pFileName));
   }
 
   private CExpression getExpression(
@@ -1233,7 +1267,8 @@ public class CFABuilder {
         if (!pItem.isExternallyInitialized() || pItem.isGlobalConstant()) {
             return getAssignedIdExpression(pItem, pExpectedType, pFileName);
         } else {
-            throw new UnsupportedOperationException("LLVM parsing does not support this global variable: " + pItem);
+        throw new UnsupportedOperationException(
+            "LLVM parsing does not support this global variable: " + pItem);
         }
     } else {
       throw new UnsupportedOperationException("LLVM parsing does not support constant " + pItem);
@@ -1894,6 +1929,6 @@ public class CFABuilder {
 
   private FileLocation getLocation(final Value pItem, final String pFileName) {
     assert pItem != null;
-    return new FileLocation(pFileName, 0, 1, 0, 0);
+    return new FileLocation(Path.of(pFileName), 0, 1, 0, 0);
   }
 }
